crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@completes_module_member_assign_keyword.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/completes_module_member_assign_keyword.v
---
[
    CompletionItem {
        label: "assign",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "assign",
                del: 12..14,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "assign ${1:lhs} = ${0:rhs};",
                del: 12..14,
            },
        ),
    },
    CompletionItem {
        label: "assign",
        kind: Keyword,
        edit: Some(
            TextEditItem {
                ins: "assign",
                del: 12..14,
            },
        ),
        snippet_edit: None,
    },
]
