crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@completes_non_ansi_port_list_names.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/completes_non_ansi_port_list_names.v
---
[
    CompletionItem {
        label: "a",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "a",
                del: 15..15,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "b",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "b",
                del: 15..15,
            },
        ),
        snippet_edit: None,
    },
]
